--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -114,8 +114,9 @@ blockquote {
   font-style: italic;
   position: relative;
   padding: 20px 39px 21px 30px;
-  box-shadow: 2px 2px 3px #eeeeee;
+  box-shadow: 2px 3px 12px #eeeeee;
   margin: 10px;
-  border-radius: 7px; }
+  border-radius: 7px;
+  font-size: .9em; }
   blockquote p {
     display: inline; }
