--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -33,12 +33,72 @@ font-family: 'icomoon';
  Header
 -------------------------------------*/
 header {
-  background-position: 0 -62px; }
+  background-position: 0 -49px; }
+  @media screen and (min-width: 1156px) {
+    header {
+      background-position: 0 -62px; } }
+  .old-ie header {
+    background-position: 0 -62px; }
   header nav {
-    margin: 5px 20px 0 0; }
+    margin: 0;
+    position: absolute;
+    top: 14%;
+    right: 11%; }
+    @media screen and (min-width: 1156px) {
+      header nav {
+        margin: 5px 20px 0 0;
+        position: static; } }
+    .old-ie header nav {
+      margin: 5px 20px 0 0;
+      position: static; }
+    header nav:after {
+      color: #fff;
+      content: "m";
+      cursor: pointer;
+      font: 2.3em "icomoon"; }
+      @media screen and (min-width: 1156px) {
+        header nav:after {
+          display: none; } }
+      .old-ie header nav:after {
+        display: none; }
     header nav a {
       padding: 7px 13px;
       font-size: 1em; }
+    header nav > ul {
+      left: -100px;
+      opacity: 0;
+      position: absolute;
+      top: 41px;
+      visibility: hidden;
+      width: 288px; }
+      @media screen and (min-width: 1156px) {
+        header nav > ul {
+          opacity: 1;
+          position: static;
+          visibility: visible;
+          width: auto; } }
+      .old-ie header nav > ul {
+        opacity: 1;
+        position: static;
+        visibility: visible;
+        width: auto; }
+      header nav > ul.shown {
+        opacity: 1;
+        visibility: visible; }
+      header nav > ul:before {
+        border: 5px solid #4b7c95;
+        border-top: 5px solid transparent;
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        content: "";
+        position: absolute;
+        right: 10px;
+        top: 0; }
+        @media screen and (min-width: 1156px) {
+          header nav > ul:before {
+            display: none; } }
+        .old-ie header nav > ul:before {
+          display: none; }
     header nav li ul {
       left: -100px;
       width: 288px; }
@@ -54,16 +114,36 @@ header {
   padding-bottom: 50px; }
   #header-inner > div {
     background-position: 0 0;
-    position: absolute;
     bottom: 7px;
+    display: none;
+    position: absolute;
     right: 0;
     top: auto; }
+    @media screen and (min-width: 1156px) {
+      #header-inner > div {
+        display: block; } }
+    .old-ie #header-inner > div {
+      display: block; }
 
 #logo {
-  background-position: 0 0;
-  margin-top: 19px;
-  padding-top: 479px;
-  width: 339px; }
+  background-size: 375px;
+  background-position: 0 -300px;
+  margin-top: 8px;
+  padding-top: 100px;
+  width: 166px; }
+  @media screen and (min-width: 1156px) {
+    #logo {
+      background-size: auto;
+      background-position: 0 0;
+      margin-top: 19px;
+      padding-top: 479px;
+      width: 339px; } }
+  .old-ie #logo {
+    background-size: auto;
+    background-position: 0 0;
+    margin-top: 19px;
+    padding-top: 479px;
+    width: 339px; }
 
 #band {
   background: url(../images/band.png) no-repeat scroll 0 0;
@@ -86,6 +166,7 @@ header {
 
 #page-inner {
   background: url(../images/home-sprite.png) no-repeat scroll 0 0;
+  height: 377px;
   padding: 0;
   border-radius: none;
   box-shadow: none; }
@@ -128,7 +209,7 @@ h1, nav.tabs {
       font-size: 1.1em; }
       #main-content > div .views-field-title a:hover {
         color: #6f6f6f; }
-    #main-content > div .views-field-title .more-link {
+    #main-content > div .views-field-title .more-link, #main-content > div .views-field-title .view-footer {
       clear: both;
       display: block;
       float: left;
@@ -138,13 +219,13 @@ h1, nav.tabs {
       clear: both;
       margin: 0 0 5px;
       overflow: hidden; }
-    #main-content > div .more-link {
+    #main-content > div .more-link, #main-content > div .view-footer {
       text-align: center; }
-      #main-content > div .more-link a {
+      #main-content > div .more-link a, #main-content > div .view-footer a {
         font-size: .8em;
         color: #000;
         text-transform: uppercase; }
-        #main-content > div .more-link a:after {
+        #main-content > div .more-link a:after, #main-content > div .view-footer a:after {
           content: "a";
           font: 1em 'icomoon';
           position: relative;
@@ -162,6 +243,21 @@ h1, nav.tabs {
         top: 3px; }
     #main-content > div + div li {
       margin-bottom: 8px; }
+  #main-content #block-views-tweets-block {
+    margin: 0;
+    padding: 1.6% 1%;
+    width: 300px; }
+    #main-content #block-views-tweets-block h2 {
+      margin-left: 5px;
+      margin-bottom: 15px; }
+      #main-content #block-views-tweets-block h2:before {
+        content: "t";
+        background-color: #fff;
+        padding: 2%;
+        border-radius: 5px;
+        top: -2px;
+        margin: 0;
+        left: -10px; }
   #main-content h3 {
     margin-bottom: 0; }
 
@@ -219,6 +315,40 @@ h1, nav.tabs {
   font-size: 1.4em;
   margin-bottom: 2px; }
 
+/* Twitter Block Specific */
+#block-views-tweets-block li {
+  background-color: #565656;
+  position: relative;
+  left: -7px;
+  width: 284px;
+  top: -3px;
+  padding: 2% 3% 0; }
+  #block-views-tweets-block li + li {
+    top: 0;
+    padding-bottom: 1%; }
+
+.views-field-created-time {
+  display: block;
+  font-size: .9em;
+  line-height: 1em; }
+
+.views-field-text {
+  color: #fff;
+  font-size: .9em;
+  line-height: 1.3em; }
+
+#main-content > div .view-footer p {
+  margin: 0;
+  position: relative;
+  top: -4px; }
+
+#main-content > div .view-footer a {
+  color: #fff;
+  font-size: .8em; }
+
+/* ----------------------------
+ Post Content - Merch Section
+------------------------------*/
 #post-content {
   background: url(../images/gray-bg2.png) repeat scroll 0 0;
   height: 415px;
@@ -290,3 +420,21 @@ h1, nav.tabs {
         #post-inner div > ul .views-field-view-node a:hover {
           background-color: #b6b6b6;
           text-decoration: none; }
+
+#block-views-memberships-block-1 .view-footer a {
+  color: #000;
+  display: block;
+  font-size: .9em;
+  overflow: hidden;
+  padding-top: 8px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%; }
+  #block-views-memberships-block-1 .view-footer a:hover {
+    color: #aaa; }
+  #block-views-memberships-block-1 .view-footer a:after {
+    content: "a";
+    font: 1em 'icomoon';
+    position: relative;
+    top: 2px;
+    text-transform: lowercase; }
