--- a/assets/scss/grid-settings.scss
+++ b/assets/scss/grid-settings.scss
@@ -9,7 +9,16 @@ $max-width: 1180px;
 // Define your breakpoints
 // Mobile First
 $tablet: new-breakpoint(min-width 768px 16);
-$desktop: new-breakpoint(min-width 1024px 16);
+$desktop: new-breakpoint(min-width 1156px 16);
 
 // Mobile Only
 $mobile: new-breakpoint(max-width 768px 8);
+
+@mixin desktop {
+  @include media($desktop) {
+    @content;
+  }
+  .old-ie & {
+    @content;
+  }
+}
